--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
+:root{
+  --main-color:#AF49FA;
+  --secondary-color:#d5a3f8;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
